fix linebreaks in project body

--- a/src/components/Pages/Work/Project/Project.styles.scss
+++ b/src/components/Pages/Work/Project/Project.styles.scss
@@ -43,6 +43,7 @@
 .non-accordion {
   display: none;
   font-size: 16px;
+  white-space: pre-wrap;
 }
 
 .project-dropdown {
@@ -54,6 +55,7 @@
   padding-bottom: 10px;
   padding-right: 10px;
   border-bottom: #d3d3d3 1px solid;
+  white-space: pre-wrap;
 }
 
 .body {
